# ai-text-processing-app

./: .dockerignore  .env.example  .gitignore  Dockerfile.backend  Dockerfile.frontend  Dockerfile.worker  README.md  agent.md  docker-compose.yml  nginx.conf  skill.md
.claude/skills/ai-app/: SKILL.md
backend/: main.py  requirements.txt
backend/api/: functions.py  records.py  tasks.py
backend/core/: config.py  deps.py  errors.py  logging.py
backend/models/: events.py  record.py  task.py
backend/services/: llm_client.py  record_store.py  task_service.py
backend/tests/: test_api_functions.py  test_api_records.py  test_api_stream.py  test_api_tasks.py  test_chunking.py  test_config.py  test_deps.py  test_errors.py  test_llm_client.py  test_logging.py  test_models.py  test_pipeline_summarize.py  test_pipeline_translate.py  test_record_store.py  test_task_service.py  test_worker_tasks.py
backend/worker/: chunking.py  settings.py  tasks.py
backend/worker/pipelines/: summarize.py  translate.py
cli/: pyproject.toml
cli/ai_app/: client.py  main.py
cli/tests/: test_cli.py  test_client.py
docs/superpowers/plans/: 2026-07-03-ai-text-processing-app.md
docs/superpowers/specs/: 2026-07-03-ai-text-processing-app-design.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/__tests__/: ModeToggle.test.tsx  StreamingOutput.test.tsx  useSSETask.test.ts
frontend/src/api/: client.ts
frontend/src/components/: ModeToggle.tsx  StreamingOutput.tsx  ThemeToggle.tsx  (+1 more)
spec/: api-design.md  requirements.md  ui-prototype.md
(+7 files in other folders)
