# cli/pyproject.toml
[project]
name = "ai-app-cli"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["click==8.1.7", "httpx==0.27.2"]

[project.optional-dependencies]
test = ["pytest==8.3.3"]

[project.scripts]
ai-app = "ai_app.main:cli"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
